# tabDance

./: README.md
addon/: manifest.json
addon/background_scripts/: background-page.html  init.js
addon/popup/: popup.css  popup.html  popup.js
addon/settings/: options.html  options.js
backend/: .gitignore  README.org  tabDance.cabal  tabDance.conf.example
backend/app/: Main.hs
backend/src/: TabDance.hs
backend/src/TabDance/: Api.hs  Common.hs  Config.hs  Model.hs
backend/src/TabDance/Api/: Setup.hs
popup/: popup.html  popup.js
