name:                tabDance
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Verdict7/tabDance
license:             BSD3
license-file:        LICENSE
author:              Philipp Uhl
maintainer:          git@ph-uhl.com
copyright:           2017 Philipp Uhl
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TabDance
                     , TabDance.Api
                     , TabDance.Api.Setup
                     , TabDance.Common
                     , TabDance.Config
                     , TabDance.Model

  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-server
                     , warp
                     , wai
                     , wai-extra
                     , aeson
                     , transformers
                     , text
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , ConfigFile
--                     , fast-logger
                     , monad-logger
                     , bytestring
                     , mtl


  default-language:    Haskell2010

executable tabDance-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tabDance
  default-language:    Haskell2010

test-suite tabDance-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tabDance
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Verdict7/tabDance
